<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="?attr/colorSurface">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/logo_description" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:textColorHint="?attr/colorOnSurfaceVariant"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorPrimary" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="?attr/colorOnSurfaceVariant"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorPrimary" />

    <EditText
        android:id="@+id/editTextMotDePasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="?attr/colorOnSurfaceVariant"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorPrimary" />

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/button_register" />

    <TextView
        android:id="@+id/connexionCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_login"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>