<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <!-- Toolbar avec flèche précédent -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- AutoCompleteTextView pour les catégories -->
    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_category"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_budget_category_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp" />

    <!-- Champ pour le nom du budget -->
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/autoCompleteCategory"
        app:layout_constraintStart_toStartOf="@id/textViewCategory"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextBudgetName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_budget_name_hint"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp" />

    <!-- Champ pour le montant -->
    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_amount"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTextBudgetName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_budget_amount_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/textViewAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp" />

    <!-- Spinner pour la temporalité -->
    <TextView
        android:id="@+id/textViewTemporality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_recurrence"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTextAmount"
        app:layout_constraintStart_toStartOf="@id/textViewCategory"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerTemporality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTemporality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp" />

    <!-- Bouton pour sauvegarder -->
    <Button
        android:id="@+id/buttonUpdateBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/update_budget"
        app:layout_constraintTop_toBottomOf="@id/spinnerTemporality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>